--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vben-admin-docs",
+  "name": "fool-admin-docs",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/vbenjs/vue-vben-admin-doc",
-  "author": "Vben <anncwb@126.com>",
+  "repository": "https://github.com/BrokenCocoon/fool-admin-doc.git",
+  "author": "fool <fool@126.com>",
   "license": "MIT",
   "scripts": {
     "dev": "vitepress dev",
