--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "fool <fool@126.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "vitepress dev",
+    "dev": "vitepress dev --port 8000",
     "build": "vitepress build",
     "serve": "vitepress serve"
   },
